MathLangParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:50:56 MathLang.g 2018-01-13 13:03:36

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;
using Map = System.Collections.IDictionary;
using HashMap = System.Collections.Generic.Dictionary<object, object>;

using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  MathLang 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:50:56")]
[System.CLSCompliant(false)]
public partial class MathLangParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "SELECT", "FROM", "WHERE", "ORDER_BY", "PROGRAM", "BLOCK", "FIELDS", "TABLES", "REQUEST", "WS", "SL_COMMENT", "ML_COMMENT", "NUMBER", "FIELD", "STRING", "DOT", "ADD", "SUB", "MUL", "DIV", "GE", "LE", "NEQUALS", "EQUALS", "GT", "LT", "ASSIGN", "'('", "')'", "','", "';'"
	};
	public const int EOF=-1;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int SELECT=4;
	public const int FROM=5;
	public const int WHERE=6;
	public const int ORDER_BY=7;
	public const int PROGRAM=8;
	public const int BLOCK=9;
	public const int FIELDS=10;
	public const int TABLES=11;
	public const int REQUEST=12;
	public const int WS=13;
	public const int SL_COMMENT=14;
	public const int ML_COMMENT=15;
	public const int NUMBER=16;
	public const int FIELD=17;
	public const int STRING=18;
	public const int DOT=19;
	public const int ADD=20;
	public const int SUB=21;
	public const int MUL=22;
	public const int DIV=23;
	public const int GE=24;
	public const int LE=25;
	public const int NEQUALS=26;
	public const int EQUALS=27;
	public const int GT=28;
	public const int LT=29;
	public const int ASSIGN=30;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public MathLangParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public MathLangParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[45+1];

		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return MathLangParser.tokenNames; } }
	public override string GrammarFileName { get { return "MathLang.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public class group_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_group();
	partial void Leave_group();

	// $ANTLR start "group"
	// MathLang.g:75:1: group : ( '(' term ')' | NUMBER | STRING | request_params | '(' exprList ')' );
	[GrammarRule("group")]
	private MathLangParser.group_return group()
	{
		Enter_group();
		EnterRule("group", 1);
		TraceIn("group", 1);
		MathLangParser.group_return retval = new MathLangParser.group_return();
		retval.Start = (IToken)input.LT(1);
		int group_StartIndex = input.Index;
		object root_0 = null;

		IToken char_literal1=null;
		IToken char_literal3=null;
		IToken NUMBER4=null;
		IToken STRING5=null;
		IToken char_literal7=null;
		IToken char_literal9=null;
		MathLangParser.term_return term2 = default(MathLangParser.term_return);
		MathLangParser.request_params_return request_params6 = default(MathLangParser.request_params_return);
		MathLangParser.exprList_return exprList8 = default(MathLangParser.exprList_return);

		object char_literal1_tree=null;
		object char_literal3_tree=null;
		object NUMBER4_tree=null;
		object STRING5_tree=null;
		object char_literal7_tree=null;
		object char_literal9_tree=null;

		try { DebugEnterRule(GrammarFileName, "group");
		DebugLocation(75, 0);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 1)) { return retval; }
			// MathLang.g:75:6: ( '(' term ')' | NUMBER | STRING | request_params | '(' exprList ')' )
			int alt1=5;
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			switch (input.LA(1))
			{
			case 31:
				{
				int LA1_1 = input.LA(2);

				if (((LA1_1>=NUMBER && LA1_1<=STRING)||LA1_1==MUL||LA1_1==31))
				{
					alt1=1;
				}
				else if ((LA1_1==SELECT))
				{
					alt1=5;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 1, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case NUMBER:
				{
				alt1=2;
				}
				break;
			case STRING:
				{
				alt1=3;
				}
				break;
			case FIELD:
			case MUL:
				{
				alt1=4;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 0, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:76:3: '(' term ')'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(76, 6);
				char_literal1=(IToken)Match(input,31,Follow._31_in_group586); if (state.failed) return retval;
				DebugLocation(76, 8);
				PushFollow(Follow._term_in_group589);
				term2=term();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, term2.Tree);
				DebugLocation(76, 16);
				char_literal3=(IToken)Match(input,32,Follow._32_in_group591); if (state.failed) return retval;

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// MathLang.g:77:3: NUMBER
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(77, 3);
				NUMBER4=(IToken)Match(input,NUMBER,Follow._NUMBER_in_group596); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				NUMBER4_tree = (object)adaptor.Create(NUMBER4);
				adaptor.AddChild(root_0, NUMBER4_tree);
				}

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// MathLang.g:78:3: STRING
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(78, 3);
				STRING5=(IToken)Match(input,STRING,Follow._STRING_in_group600); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				STRING5_tree = (object)adaptor.Create(STRING5);
				adaptor.AddChild(root_0, STRING5_tree);
				}

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// MathLang.g:79:3: request_params
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(79, 3);
				PushFollow(Follow._request_params_in_group604);
				request_params6=request_params();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, request_params6.Tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// MathLang.g:80:3: '(' exprList ')'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(80, 6);
				char_literal7=(IToken)Match(input,31,Follow._31_in_group608); if (state.failed) return retval;
				DebugLocation(80, 8);
				PushFollow(Follow._exprList_in_group611);
				exprList8=exprList();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, exprList8.Tree);
				DebugLocation(80, 20);
				char_literal9=(IToken)Match(input,32,Follow._32_in_group613); if (state.failed) return retval;

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("group", 1);
			LeaveRule("group", 1);
			Leave_group();
			if (state.backtracking > 0) { Memoize(input, 1, group_StartIndex); }
		}
		DebugLocation(81, 0);
		} finally { DebugExitRule(GrammarFileName, "group"); }
		return retval;

	}
	// $ANTLR end "group"

	public class mult_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_mult();
	partial void Leave_mult();

	// $ANTLR start "mult"
	// MathLang.g:83:1: mult : group ( ( MUL | DIV ) group )* ;
	[GrammarRule("mult")]
	private MathLangParser.mult_return mult()
	{
		Enter_mult();
		EnterRule("mult", 2);
		TraceIn("mult", 2);
		MathLangParser.mult_return retval = new MathLangParser.mult_return();
		retval.Start = (IToken)input.LT(1);
		int mult_StartIndex = input.Index;
		object root_0 = null;

		IToken set11=null;
		MathLangParser.group_return group10 = default(MathLangParser.group_return);
		MathLangParser.group_return group12 = default(MathLangParser.group_return);

		object set11_tree=null;

		try { DebugEnterRule(GrammarFileName, "mult");
		DebugLocation(83, 39);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 2)) { return retval; }
			// MathLang.g:83:5: ( group ( ( MUL | DIV ) group )* )
			DebugEnterAlt(1);
			// MathLang.g:83:7: group ( ( MUL | DIV ) group )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(83, 7);
			PushFollow(Follow._group_in_mult622);
			group10=group();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, group10.Tree);
			DebugLocation(83, 13);
			// MathLang.g:83:13: ( ( MUL | DIV ) group )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				int LA2_0 = input.LA(1);

				if (((LA2_0>=MUL && LA2_0<=DIV)))
				{
					alt2=1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// MathLang.g:83:15: ( MUL | DIV ) group
					{
					DebugLocation(83, 15);
					set11=(IToken)input.LT(1);
					set11=(IToken)input.LT(1);
					if ((input.LA(1)>=MUL && input.LA(1)<=DIV))
					{
						input.Consume();
						if ( state.backtracking == 0 ) root_0 = (object)adaptor.BecomeRoot((object)adaptor.Create(set11), root_0);
						state.errorRecovery=false;state.failed=false;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}

					DebugLocation(83, 30);
					PushFollow(Follow._group_in_mult637);
					group12=group();
					PopFollow();
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, group12.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("mult", 2);
			LeaveRule("mult", 2);
			Leave_mult();
			if (state.backtracking > 0) { Memoize(input, 2, mult_StartIndex); }
		}
		DebugLocation(83, 39);
		} finally { DebugExitRule(GrammarFileName, "mult"); }
		return retval;

	}
	// $ANTLR end "mult"

	public class add_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_add();
	partial void Leave_add();

	// $ANTLR start "add"
	// MathLang.g:84:1: add : mult ( ( ADD | SUB ) mult )* ;
	[GrammarRule("add")]
	private MathLangParser.add_return add()
	{
		Enter_add();
		EnterRule("add", 3);
		TraceIn("add", 3);
		MathLangParser.add_return retval = new MathLangParser.add_return();
		retval.Start = (IToken)input.LT(1);
		int add_StartIndex = input.Index;
		object root_0 = null;

		IToken set14=null;
		MathLangParser.mult_return mult13 = default(MathLangParser.mult_return);
		MathLangParser.mult_return mult15 = default(MathLangParser.mult_return);

		object set14_tree=null;

		try { DebugEnterRule(GrammarFileName, "add");
		DebugLocation(84, 39);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 3)) { return retval; }
			// MathLang.g:84:4: ( mult ( ( ADD | SUB ) mult )* )
			DebugEnterAlt(1);
			// MathLang.g:84:7: mult ( ( ADD | SUB ) mult )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(84, 7);
			PushFollow(Follow._mult_in_add649);
			mult13=mult();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, mult13.Tree);
			DebugLocation(84, 13);
			// MathLang.g:84:13: ( ( ADD | SUB ) mult )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				int LA3_0 = input.LA(1);

				if (((LA3_0>=ADD && LA3_0<=SUB)))
				{
					alt3=1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// MathLang.g:84:15: ( ADD | SUB ) mult
					{
					DebugLocation(84, 15);
					set14=(IToken)input.LT(1);
					set14=(IToken)input.LT(1);
					if ((input.LA(1)>=ADD && input.LA(1)<=SUB))
					{
						input.Consume();
						if ( state.backtracking == 0 ) root_0 = (object)adaptor.BecomeRoot((object)adaptor.Create(set14), root_0);
						state.errorRecovery=false;state.failed=false;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						DebugRecognitionException(mse);
						throw mse;
					}

					DebugLocation(84, 30);
					PushFollow(Follow._mult_in_add665);
					mult15=mult();
					PopFollow();
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, mult15.Tree);

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("add", 3);
			LeaveRule("add", 3);
			Leave_add();
			if (state.backtracking > 0) { Memoize(input, 3, add_StartIndex); }
		}
		DebugLocation(84, 39);
		} finally { DebugExitRule(GrammarFileName, "add"); }
		return retval;

	}
	// $ANTLR end "add"

	public class compare_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_compare();
	partial void Leave_compare();

	// $ANTLR start "compare"
	// MathLang.g:85:1: compare : add ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) add )? ;
	[GrammarRule("compare")]
	private MathLangParser.compare_return compare()
	{
		Enter_compare();
		EnterRule("compare", 4);
		TraceIn("compare", 4);
		MathLangParser.compare_return retval = new MathLangParser.compare_return();
		retval.Start = (IToken)input.LT(1);
		int compare_StartIndex = input.Index;
		object root_0 = null;

		IToken set17=null;
		MathLangParser.add_return add16 = default(MathLangParser.add_return);
		MathLangParser.add_return add18 = default(MathLangParser.add_return);

		object set17_tree=null;

		try { DebugEnterRule(GrammarFileName, "compare");
		DebugLocation(85, 64);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 4)) { return retval; }
			// MathLang.g:85:8: ( add ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) add )? )
			DebugEnterAlt(1);
			// MathLang.g:85:10: add ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) add )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(85, 10);
			PushFollow(Follow._add_in_compare677);
			add16=add();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, add16.Tree);
			DebugLocation(85, 14);
			// MathLang.g:85:14: ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) add )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, decisionCanBacktrack[4]);
			int LA4_0 = input.LA(1);

			if (((LA4_0>=GE && LA4_0<=LT)))
			{
				alt4=1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:85:16: ( GE | LE | NEQUALS | EQUALS | GT | LT ) add
				{
				DebugLocation(85, 16);
				set17=(IToken)input.LT(1);
				set17=(IToken)input.LT(1);
				if ((input.LA(1)>=GE && input.LA(1)<=LT))
				{
					input.Consume();
					if ( state.backtracking == 0 ) root_0 = (object)adaptor.BecomeRoot((object)adaptor.Create(set17), root_0);
					state.errorRecovery=false;state.failed=false;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					MismatchedSetException mse = new MismatchedSetException(null,input);
					DebugRecognitionException(mse);
					throw mse;
				}

				DebugLocation(85, 57);
				PushFollow(Follow._add_in_compare707);
				add18=add();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, add18.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("compare", 4);
			LeaveRule("compare", 4);
			Leave_compare();
			if (state.backtracking > 0) { Memoize(input, 4, compare_StartIndex); }
		}
		DebugLocation(85, 64);
		} finally { DebugExitRule(GrammarFileName, "compare"); }
		return retval;

	}
	// $ANTLR end "compare"

	public class term_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_term();
	partial void Leave_term();

	// $ANTLR start "term"
	// MathLang.g:86:1: term : compare ;
	[GrammarRule("term")]
	private MathLangParser.term_return term()
	{
		Enter_term();
		EnterRule("term", 5);
		TraceIn("term", 5);
		MathLangParser.term_return retval = new MathLangParser.term_return();
		retval.Start = (IToken)input.LT(1);
		int term_StartIndex = input.Index;
		object root_0 = null;

		MathLangParser.compare_return compare19 = default(MathLangParser.compare_return);


		try { DebugEnterRule(GrammarFileName, "term");
		DebugLocation(86, 15);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 5)) { return retval; }
			// MathLang.g:86:5: ( compare )
			DebugEnterAlt(1);
			// MathLang.g:86:7: compare
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(86, 7);
			PushFollow(Follow._compare_in_term718);
			compare19=compare();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, compare19.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("term", 5);
			LeaveRule("term", 5);
			Leave_term();
			if (state.backtracking > 0) { Memoize(input, 5, term_StartIndex); }
		}
		DebugLocation(86, 15);
		} finally { DebugExitRule(GrammarFileName, "term"); }
		return retval;

	}
	// $ANTLR end "term"

	public class table_field_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_table_field();
	partial void Leave_table_field();

	// $ANTLR start "table_field"
	// MathLang.g:88:1: table_field : ( ( FIELD DOT ( FIELD | '*' ) ) | FIELD );
	[GrammarRule("table_field")]
	private MathLangParser.table_field_return table_field()
	{
		Enter_table_field();
		EnterRule("table_field", 6);
		TraceIn("table_field", 6);
		MathLangParser.table_field_return retval = new MathLangParser.table_field_return();
		retval.Start = (IToken)input.LT(1);
		int table_field_StartIndex = input.Index;
		object root_0 = null;

		IToken FIELD20=null;
		IToken DOT21=null;
		IToken set22=null;
		IToken FIELD23=null;

		object FIELD20_tree=null;
		object DOT21_tree=null;
		object set22_tree=null;
		object FIELD23_tree=null;

		try { DebugEnterRule(GrammarFileName, "table_field");
		DebugLocation(88, 47);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 6)) { return retval; }
			// MathLang.g:88:12: ( ( FIELD DOT ( FIELD | '*' ) ) | FIELD )
			int alt5=2;
			try { DebugEnterDecision(5, decisionCanBacktrack[5]);
			int LA5_0 = input.LA(1);

			if ((LA5_0==FIELD))
			{
				int LA5_1 = input.LA(2);

				if ((LA5_1==DOT))
				{
					alt5=1;
				}
				else if ((LA5_1==EOF||LA5_1==FROM||LA5_1==ORDER_BY||(LA5_1>=ADD && LA5_1<=LT)||(LA5_1>=32 && LA5_1<=34)))
				{
					alt5=2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 5, 1, input);

					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 5, 0, input);

				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:88:14: ( FIELD DOT ( FIELD | '*' ) )
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(88, 14);
				// MathLang.g:88:14: ( FIELD DOT ( FIELD | '*' ) )
				DebugEnterAlt(1);
				// MathLang.g:88:15: FIELD DOT ( FIELD | '*' )
				{
				DebugLocation(88, 15);
				FIELD20=(IToken)Match(input,FIELD,Follow._FIELD_in_table_field728); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				FIELD20_tree = (object)adaptor.Create(FIELD20);
				adaptor.AddChild(root_0, FIELD20_tree);
				}
				DebugLocation(88, 24);
				DOT21=(IToken)Match(input,DOT,Follow._DOT_in_table_field730); if (state.failed) return retval;
				if ( state.backtracking == 0 ) {
				DOT21_tree = (object)adaptor.Create(DOT21);
				root_0 = (object)adaptor.BecomeRoot(DOT21_tree, root_0);
				}
				DebugLocation(88, 26);
				set22=(IToken)input.LT(1);
				if (input.LA(1)==FIELD||input.LA(1)==MUL)
				{
					input.Consume();
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, (object)adaptor.Create(set22));
					state.errorRecovery=false;state.failed=false;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					MismatchedSetException mse = new MismatchedSetException(null,input);
					DebugRecognitionException(mse);
					throw mse;
				}


				}


				}
				break;
			case 2:
				DebugEnterAlt(2);
				// MathLang.g:88:43: FIELD
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(88, 43);
				FIELD23=(IToken)Match(input,FIELD,Follow._FIELD_in_table_field744); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				FIELD23_tree = (object)adaptor.Create(FIELD23);
				adaptor.AddChild(root_0, FIELD23_tree);
				}

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("table_field", 6);
			LeaveRule("table_field", 6);
			Leave_table_field();
			if (state.backtracking > 0) { Memoize(input, 6, table_field_StartIndex); }
		}
		DebugLocation(88, 47);
		} finally { DebugExitRule(GrammarFileName, "table_field"); }
		return retval;

	}
	// $ANTLR end "table_field"

	public class request_params_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_request_params();
	partial void Leave_request_params();

	// $ANTLR start "request_params"
	// MathLang.g:89:1: request_params : ( '*' | table_field );
	[GrammarRule("request_params")]
	private MathLangParser.request_params_return request_params()
	{
		Enter_request_params();
		EnterRule("request_params", 7);
		TraceIn("request_params", 7);
		MathLangParser.request_params_return retval = new MathLangParser.request_params_return();
		retval.Start = (IToken)input.LT(1);
		int request_params_StartIndex = input.Index;
		object root_0 = null;

		IToken char_literal24=null;
		MathLangParser.table_field_return table_field25 = default(MathLangParser.table_field_return);

		object char_literal24_tree=null;

		try { DebugEnterRule(GrammarFileName, "request_params");
		DebugLocation(89, 34);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 7)) { return retval; }
			// MathLang.g:89:16: ( '*' | table_field )
			int alt6=2;
			try { DebugEnterDecision(6, decisionCanBacktrack[6]);
			int LA6_0 = input.LA(1);

			if ((LA6_0==MUL))
			{
				alt6=1;
			}
			else if ((LA6_0==FIELD))
			{
				alt6=2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 6, 0, input);

				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// MathLang.g:89:18: '*'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(89, 18);
				char_literal24=(IToken)Match(input,MUL,Follow._MUL_in_request_params751); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				char_literal24_tree = (object)adaptor.Create(char_literal24);
				adaptor.AddChild(root_0, char_literal24_tree);
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// MathLang.g:89:24: table_field
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(89, 24);
				PushFollow(Follow._table_field_in_request_params755);
				table_field25=table_field();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, table_field25.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
